third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/minute-over.stderr
TOML parse error at line 2, column 8
  |
2 | d = 00:60:00
  |        ^
invalid time
value is out of range
